fix display of v-align recurrence block

--- a/styles/widgets/base/recurrenceEditor.less
+++ b/styles/widgets/base/recurrenceEditor.less
@@ -98,6 +98,7 @@
         }
 
         .dx-recurrence-repeat-on {
+            display: block;
             padding-top: 5px;
 
             .dx-recurrence-repeat-on-label {
